# agora-video-controller

./: .env.example  .gitignore  CMakeLists.txt  README.md  agora_streaming_controlled.cpp  agora_streaming_controlled_with_timestamp.cpp  build.sh  next.config.js  package-lock.json  package.json  tsconfig.json  validate-setup.sh
common/: sample_local_user_observer.h
convert/: README.md  webrtc_converter.py
lib/: processManager.ts
pages/: index.tsx
pages/api/streaming/: start.ts  status.ts  stop.ts  switch.ts
